minmax uniform sampling start

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ set(SOURCE_FILES
         "detection.cu"
         "detection.h"
         "kdtree.cpp"
-        "kdtree.h"
+        "kdtree.hpp"
         )
 
 cuda_add_library(src
