--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@
 set(SOURCE_FILES
         "detection.cu"
         "detection.h"
+        "sample.cu"
+        "sample.h"
         "kdtree.cpp"
         "kdtree.hpp"
         )
