--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -5,5 +5,5 @@ set(SOURCE_FILES
 
 cuda_add_library(util
         ${SOURCE_FILES}
-        OPTIONS -arch=sm_20
+        OPTIONS -arch=sm_50 -std=c++11
         )
