writing classes and shared search functions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,10 @@ set(SOURCE_FILES
         "sample.h"
         "shot.cu"
         "shot.h"
+        "shot_lrf.cu"
+        "shot_lrf.h"
+        "search.cu"
+        "search.h"
         "kdtree.cpp"
         "kdtree.hpp"
         )
