--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,8 @@ find_package(Threads REQUIRED)
 list(APPEND CUDA_NVCC_FLAGS_DEBUG          -O0 -g -G)
 list(APPEND CUDA_NVCC_FLAGS_RELWITHDEBINFO -O2 -g -lineinfo)
 list(APPEND CUDA_NVCC_FLAGS_RELEASE -O3 -DNDEBUG)
-set(CUDA_ATTACH_VS_BUILD_RULE_TO_CUDA_FILE ON)
-SET(CUDA_SEPARABLE_COMPILATION ON)
-#list(APPEND CMAKE_EXE_LINKER_FLAGS "-lX11 -lXxf86vm -lXi --verbose")
+
+list(APPEND CMAKE_EXE_LINKER_FLAGS "-lX11 -lXxf86vm -lXi")
 
 find_package(PCL 1.9 REQUIRED)
 
